<package format="2">
  <name>fast_planner</name>
  <version>1.0.1</version>
  <description>
    The dyn_planner package
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/dyn_planner</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>arc_utilities</depend>
  <depend>sdf_tools</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <build_depend>rospy</build_depend>
  <depend>octomap_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>prometheus_msgs</depend>
  <depend>traj_utils</depend>

  <build_depend>plan_env</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>bspline_opt</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>octomap</build_depend>

  <exec_depend>plan_env</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>bspline_opt</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>octomap</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
