<package format="2">
  <name>fast_planner</name>
  <version>1.1.0</version>
  <description>
    The dyn_planner package
  </description>
  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
  <author email="bzhouai@todo.todo">bzhouai</author>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>arc_utilities</depend>
  <depend>sdf_tools</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>rospy</depend>
  <depend>octomap_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>prometheus_msgs</depend>
  <depend>traj_utils</depend>

  <build_depend>plan_env</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>bspline_opt</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>octomap</build_depend>

  <exec_depend>plan_env</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>bspline_opt</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>octomap</exec_depend>

  <export>
  </export>
</package>
